# llm-web-api-server

./: Cargo.toml  README.md  config.yml
src/: config.rs  error.rs  main.rs
src/backend/: openai.rs
src/backend/ggml/: llama.rs  mod.rs  tokenizer.rs
