[package]
name = "llm-web-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.6", default-features = false, features = [
    "async-await",
] }
# hyper = { version = "0.14.27", features = ["full"] }
# hyper-rustls = "0.24.1"
# tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xin = { path = "../../xin" }
serde_yaml = "0.9"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
wasmedge_hyper_rustls = "0.1.0"
wasmedge_rustls_api = { version = "0.1.0", features = ["tokio_async"] }
